src/objects/Measurable__c.object
<CustomObject>
    <fields>
        <fullName>Current_Value__c</fullName>
        <description>Current value based on the latest measurement</description>
        <formula>&quot;TBD&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measurable__c</fullName>
        <description>Name of the Measurable to use for Goals and Assessments</description>
        <inlineHelpText>Name of the Measurable to use for Goals and Assessments</inlineHelpText>
        <label>Measurable</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Starting_Value__c</fullName>
        <formula>&quot;TBD&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Starting Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Value__c</fullName>
        <formula>&quot;TBD&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Value</label>
        <type>Text</type>
    </fields>
    <label>Measurable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Measurable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Measurables</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>